Fixed sign-in link on home page in css style changed width looks nice on small devices

--- a/app/static/css/home.css
+++ b/app/static/css/home.css
@@ -99,22 +99,22 @@ input[type="search"]::-webkit-search-cancel-button {
   
 }
 
-.header .top ul .user-in{
+.header .top ul .sign-in{
     position: relative;
-    display: inline-block;
+    width: 100%;
+    padding: 5px;
     border-radius: 20px;
-    
     border: 3px solid goldenrod;
    
 }
 
-.header .top ul .user-in i{
+.header .top ul .sign-in i{
     position: absolute;
-    right: 0.6rem;
+    right: 10%;    
     
 }
 
-.header .top ul .user-in a{
+.header .top ul .sign-in a{
     display: block;
 }
 
@@ -222,6 +222,7 @@ input[type="search"]::-webkit-search-cancel-button {
     }
     .header .top ul{
         width: 50%;
+        
     }
     .cards {
         grid-template-columns: repeat(3, 1fr);
@@ -233,7 +234,7 @@ input[type="search"]::-webkit-search-cancel-button {
 
 @media (max-width:479px){
     .header img{
-        width: 50%;
+        width: 70%;
     }
     .header .top{
         gap: 5%;
@@ -253,18 +254,23 @@ input[type="search"]::-webkit-search-cancel-button {
     }
 
     .header .top ul{
-        
-        width: 50%;
+        margin-right: 2%;
+        width: 100%;
         
     }
-    .header .top ul .user-in {
-        padding: 5px;
-        border: 1px solid goldenrod;
-    }
+  
 
     .counter{
         font-size: large;
     }
+
+    .header .top ul .sign-in {
+        border: 1px solid goldenrod;   
+    }
+
+    .header .top ul .sign-in i {
+        display: none;
+      }
 
     
    
